--- a/editor/css/sub.css
+++ b/editor/css/sub.css
@@ -170,10 +170,12 @@
 #sub .tablist {
   list-style: none;
   margin: 0;
+  margin-bottom: -10px;
   padding: 0;
   font-size: 0.8em;
   display: flex;
   flex-direction: row;
+  z-index: 0;
 }
 
 #sub .tablist li {
@@ -194,7 +196,7 @@
   background-color: #5b7cb3;
 }
 
-#sub .tablist li.open::before {
+#sub .tablist li.open a::before {
   content: "";
   width: 11px;
   height: 11px;
@@ -212,4 +214,6 @@
   white-space: nowrap;
   height: 100%;
   text-decoration: none;
+  box-sizing: border-box;
+  background-color: inherit;
 }
